bug image and tests

--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8" />
   <link rel="shortcut icon" href="%PUBLIC_URL%/assets/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="theme-color" content="#000000" />
+  <meta name="viewport" contentEntity="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="theme-color" contentEntity="#000000" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
